fix: 🛠 last tweaks before branches merge

--- a/packages/client/src/sass/SettingsPage-style.scss
+++ b/packages/client/src/sass/SettingsPage-style.scss
@@ -17,7 +17,7 @@
     border-radius: 5px;
     justify-content: center;
     p {
-      font-size: 1.4em;
+      font-size: 1.2em;
       color: $main-text;
       font-weight: 500;
     }
@@ -30,6 +30,11 @@
       margin-top: 15px;
       padding: 15px 0;
     }
+
+    button > img {
+      margin-left: 20px;
+      width: 1.2em;
+    }
     button {
       color: $main-text;
       font-size: 1.3em;
@@ -37,6 +42,12 @@
       border: none;
       font-family: $roboto-font;
       letter-spacing: 0.7px;
+      .payoutIcon {
+        width: 1.38em;
+      }
+      .accountIcon {
+        width: 1.18em;
+      }
     }
     .selected {
       width: 17.5vw;
