--- a/packages/client/src/sass/SettingsPageElements/Account-style.scss
+++ b/packages/client/src/sass/SettingsPageElements/Account-style.scss
@@ -1,10 +1,5 @@
 @import '../../variables.scss';
 
-p {
-  font-size: 8em;
-  color: $main-text;
-}
-
 .accountWrapper.hide {
   display: none;
 }
@@ -14,50 +9,55 @@ p {
 
 .accountWrapper {
   width: 82.5vw;
-  align-items: center;
-  justify-content: center;
-  .formWrapper{
+  margin-left: 17.5%;
+  margin-top: 40px;
+
+  p {
+    font-size: 8em;
+    color: $main-text;
+  }
+  .formWrapper {
     min-width: 50%;
     @media screen and (max-width: 768px) {
-        min-width: 80%;
-      }
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      .buttonWrapper {
-        margin: 40px 0px;
-      }
-      .inputBoxWrapper{
-        position: relative;
-        .insideBox {
-          position: absolute;
-          bottom: 28px;
-          text-align: right;
-          width: 500px;
-          pointer-events: none;
-          padding-right: 24px;
-          >p {
-            font-size: 1em;
-            color: $gray;
-          }
-        }
-        .rightBox {
-          position: absolute;
-          bottom: 20px;
-          left: 100%;
-          margin-left: 24px;
-        }
-      }
-      .token {
-        text-align: left;
+      min-width: 80%;
+    }
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    .buttonWrapper {
+      margin: 40px 0px;
+    }
+    .inputBoxWrapper {
+      position: relative;
+      .insideBox {
+        position: absolute;
+
+        bottom: 28px;
         width: 500px;
-        margin-left: 48px;
-        > p{
+        padding-right: 24px;
+
+        text-align: right;
+        pointer-events: none;
+        > p {
           font-size: 1em;
           color: $gray;
         }
       }
+      .rightBox {
+        position: absolute;
+
+        bottom: 28px;
+        width: 500px;
+      }
+    }
+    .token {
+      text-align: left;
+      width: 500px;
+      margin-left: 48px;
+      > p {
+        font-size: 1em;
+        color: $gray;
+      }
     }
   }
-  
+}
