--- a/packages/client/src/sass/SettingsPageElements/Referrals-style.scss
+++ b/packages/client/src/sass/SettingsPageElements/Referrals-style.scss
@@ -1,11 +1,11 @@
 @import '../../variables.scss';
 
 .referralWrapper {
-  justify-content: center;
-  align-items: center;
   width: 82.5vw;
   margin-left: 17.5%;
+  margin-top: 40px;
   color: $main-text;
+  align-items: flex-start;
 
   p {
     font-size: 1.6em;
