add ➕: write storage feature

--- a/packages/client/src/sass/LandingPage-style.scss
+++ b/packages/client/src/sass/LandingPage-style.scss
@@ -141,6 +141,7 @@
       h1 {
         margin: 10px 0;
         font-size: 3em;
+        padding-right: 50px;
       }
       p {
         width: 60%;
@@ -171,6 +172,7 @@
       h1 {
         margin: 10px 0;
         font-size: 3em;
+        padding-right: 50px;
       }
       p {
         width: 45%;
