--- a/packages/client/src/sass/supportPage/AccountPage-style.scss
+++ b/packages/client/src/sass/supportPage/AccountPage-style.scss
@@ -63,6 +63,7 @@
         font-weight: 300;
         color: #f4f4f4;
         list-style: none;
+        margin-bottom: 60px;
         li {
             &:nth-child(n+2) {
                 &::before{
@@ -71,6 +72,34 @@
                     padding: 0 0.5rem;
                 }
                 font-weight: 500;
+            }
+        }
+    }
+
+    .card__container{
+        .account__card {
+            background-color: #1B1B1B;
+            margin-bottom: 30px;
+            border-radius: 6px;
+            text-align: left;
+            padding: 25px;
+            h1 {
+                font-size: 30px;
+                line-height: 45px;
+                font-weight: 600;
+            }
+
+            p {
+                font-size: 16px;
+            }
+
+            button {
+                padding: 10px 20px;
+                border-radius: 10px;
+                background-color: #0082FF;
+                border: 0;
+                font-weight: 500;
+                font-size: 20px;
             }
         }
     }
