--- a/packages/client/src/sass/LandingPage-style.scss
+++ b/packages/client/src/sass/LandingPage-style.scss
@@ -3,13 +3,17 @@
 .lpWrapper {
   background: #0d0d0d;
   padding: 0 16.825%;
+
+  @media screen and (max-width: 480px) {
+    padding: 0 3rem;
+  }
   header {
     margin-top: 30px;
     width: 100%;
     height: 80px;
     justify-content: space-between;
 
-    img {
+    img, picture {
       height: 100%;
     }
     aside {
