--- a/packages/client/src/sass/LandingPage-style.scss
+++ b/packages/client/src/sass/LandingPage-style.scss
@@ -61,6 +61,10 @@
       margin: 30px 0;
       width: 900px;
       color: $gray;
+      @media screen and (max-width: 480px) {
+        width: 100%;
+        
+      }
     }
     .mockupWrapper {
       position: relative;
