add responsive on btn

--- a/packages/client/src/sass/LandingPage-style.scss
+++ b/packages/client/src/sass/LandingPage-style.scss
@@ -63,7 +63,11 @@
       color: $gray;
       @media screen and (max-width: 480px) {
         width: 100%;
-        
+      }
+    }
+    button.button {
+      .content {
+        content: "s";
       }
     }
     .mockupWrapper {
