--- a/packages/client/src/sass/LandingPage-style.scss
+++ b/packages/client/src/sass/LandingPage-style.scss
@@ -65,11 +65,7 @@
         width: 100%;
       }
     }
-    button.button {
-      .content {
-        content: "s";
-      }
-    }
+    
     .mockupWrapper {
       position: relative;
       div {
@@ -109,8 +105,23 @@
     justify-items: center;
     color: $main-text;
 
+    @media screen and (max-width: 480px) {
+      width: 100%;
+      grid-template-columns: 1fr;
+      grid-template-rows: repeat(4, 1fr);
+    }
+
     div {
       align-items: flex-start;
+      
+      @media screen and (max-width: 480px) {
+        &:nth-child(3) {
+          margin-left: 20px;
+        }
+        &:nth-child(4) {
+          margin-left: 10px;
+        }
+      }
       img {
         width: 120px;
       }
@@ -137,11 +148,17 @@
           margin-top: 12px;
           width: 280px;
           color: $back-text;
+          @media screen and (max-width: 480px) {
+            width: 100%;
+          }
         }
       }
     }
     .shieldDiv {
       margin-left: 68px;
+      @media screen and (max-width: 480px) {
+        margin-left: 0;
+      }
     }
   }
   .nrpArt {
