--- a/packages/client/src/sass/LandingPage-style.scss
+++ b/packages/client/src/sass/LandingPage-style.scss
@@ -225,6 +225,11 @@
     height: 650px;
     justify-content: space-between;
     width: 100%;
+    @media screen and (max-width: 480px) {
+      flex-direction: column;
+      align-items: unset;
+      height: unset;
+    }
     .textContainer {
       color: $main-text;
       h4 {
@@ -252,10 +257,13 @@
         margin-top: 30px;
 
         align-items: flex-start;
+        
         section {
           min-height: 90px;
           width: 600px;
-
+          @media screen and (max-width: 480px) {
+            width: 100%;
+          }
           div {
             padding: 6px 20px 6px 15px;
 
@@ -301,6 +309,9 @@
       flex-direction: column;
       justify-content: space-evenly;
       align-items: center;
+      @media screen and (max-width: 480px) {
+        width: 100%;
+      }
       .scrHeader {
         width: 100%;
         height: 10%;
@@ -315,6 +326,10 @@
           align-items: center;
 
           position: relative;
+
+          @media screen and (max-width: 480px) {
+            margin: 20px 0;
+          }
 
           input {
             width: 100%;
@@ -342,6 +357,9 @@
 
         overflow-y: scroll;
         padding-right: 10px;
+        @media screen and (max-width: 480px) {
+          padding: 0;
+        }
       }
       ::-webkit-scrollbar {
         width: 6px;
