--- a/packages/client/src/sass/LandingPage-style.scss
+++ b/packages/client/src/sass/LandingPage-style.scss
@@ -21,7 +21,8 @@
       width: 70%;
       justify-content: space-around;
       @media screen and (max-width:480px){
-        
+        display: flex;
+        position: absolute;
       }
       .headerList {
         color: $main-text;
