a lot of changes in setting page and other

--- a/packages/client/src/sass/LandingPage-style.scss
+++ b/packages/client/src/sass/LandingPage-style.scss
@@ -48,8 +48,8 @@
     p {
       font-size: 1.2em;
       font-weight: 50;
-      margin: 30px 0;
-      width: 900px;
+      margin: 30px 0 70px;
+      width: 770px;
       color: $gray;
     }
     .mockupWrapper {
