--- a/packages/client/src/sass/SettingsPageElements/Referrals-style.scss
+++ b/packages/client/src/sass/SettingsPageElements/Referrals-style.scss
@@ -81,11 +81,13 @@
         font-size: 1.6em;
         position: relative;
         padding-bottom: 20px;
+
         img {
           height: 0.86em;
         }
         span {
           color: $green;
+          margin-left: 6px;
         }
 
         &::after {
