--- a/packages/client/src/sass/SignInPage-style.scss
+++ b/packages/client/src/sass/SignInPage-style.scss
@@ -90,8 +90,8 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: flex-start;
-    height: 60px;
-    width: 150px;
+    align-items: center;
+    height: 50px;
+    width: 180px;
   }
 }
