--- a/packages/client/src/sass/LandingPage-style.scss
+++ b/packages/client/src/sass/LandingPage-style.scss
@@ -122,11 +122,32 @@
       color: $gray;
       @media screen and (max-width: 480px) {
         width: 100%;
+        margin: 30px 0;
+      }
+    }
+
+    & main:nth-of-type(2) {
+      display: none;
+    }
+
+    @media screen and (max-width: 480px) {
+      text-align: left;
+      align-items: flex-start;
+      margin-bottom: 140px;
+      & main:nth-of-type(1) {
+        display: none;
+      }
+
+      & main:nth-of-type(2) {
+        display: block;
       }
     }
     
     .mockupWrapper {
       position: relative;
+      @media screen and (max-width: 480px) {
+        display: none;
+      }
       div {
         height: 45%;
         position: absolute;
