--- a/packages/client/src/sass/LandingPage-style.scss
+++ b/packages/client/src/sass/LandingPage-style.scss
@@ -392,12 +392,14 @@
       height: 70%;
       padding: 0 20px;
       background: $background;
+      
 
       display: flex;
       flex-direction: column;
       justify-content: space-evenly;
       align-items: center;
       @media screen and (max-width: 480px) {
+        display: none;
         width: 100%;
         margin-bottom: 40px;
       }
@@ -477,12 +479,16 @@
     width: 100vw;
     height: 560px;
     padding: 0 25.359%;
-    @media screen and (min-width:480px) {
+    @media screen and (max-width:480px) {
       padding: 0 3rem;
+      height: 300px;
     }
     background: $background;
     .textContainer {
       color: $main-text;
+      @media screen and (max-width:480px) {
+        font-weight: 600;
+      }
       h4 {
         font-weight: 600;
         color: $accent;
@@ -490,14 +496,14 @@
       h1 {
         margin: 10px 0;
         font-size: 3em;
-        @media screen and (min-width:480px) {
+        @media screen and (max-width:480px) {
           font-size: 2em;
         }
       }
       p {
         width: 60%;
         color: $back-text;
-        @media screen and (min-width:480px) {
+        @media screen and (max-width:480px) {
           width: 100%;
         }
         .accentSpan {
@@ -511,10 +517,11 @@
     }
     img {
       width: 380px;
-      @media screen and (min-width:480px) {
+      @media screen and (max-width:480px) {
+        width: 250px;
         position: absolute;
         opacity: 0.3;  
-        left: -12rem;
+        left: -7rem;
       }
     }
   }
