--- a/packages/client/src/sass/LandingPage-style.scss
+++ b/packages/client/src/sass/LandingPage-style.scss
@@ -18,12 +18,13 @@
     height: 80px;
     justify-content: space-between;
 
-    img, picture {
+    img,
+    picture {
       height: 100%;
     }
     #hamburger {
       display: none;
-      @media screen and (max-width:480px){ 
+      @media screen and (max-width: 480px) {
         display: flex;
         position: sticky;
         z-index: 10;
@@ -35,7 +36,7 @@
     aside {
       width: 70%;
       justify-content: space-around;
-      @media screen and (max-width:480px){
+      @media screen and (max-width: 480px) {
         display: none;
         &.active {
           display: flex;
@@ -54,8 +55,8 @@
         color: $main-text;
         width: 380px;
         justify-content: space-evenly;
-        
-        @media screen and (max-width:480px){
+
+        @media screen and (max-width: 480px) {
           display: flex;
           flex-direction: column;
           text-align: center;
@@ -75,7 +76,7 @@
         align-items: center;
         justify-content: center;
 
-        @media screen and (max-width:480px){
+        @media screen and (max-width: 480px) {
           display: flex;
           flex-direction: column;
           width: 100%;
@@ -92,7 +93,7 @@
           margin: 0 20px;
           font-family: $poppins-font;
           color: $back-text;
-          @media screen and (max-width:480px){
+          @media screen and (max-width: 480px) {
             display: none;
           }
         }
@@ -142,7 +143,7 @@
         display: block;
       }
     }
-    
+
     .mockupWrapper {
       position: relative;
       @media screen and (max-width: 480px) {
@@ -194,7 +195,7 @@
 
     div {
       align-items: flex-start;
-      
+
       @media screen and (max-width: 480px) {
         margin-bottom: 40px;
         height: fit-content;
@@ -206,18 +207,21 @@
         }
       }
 
-      
       img {
         width: 120px;
       }
-      .shield, .hand, .clock {
+      .shield,
+      .hand,
+      .clock {
         width: 140px;
       }
       @media screen and (max-width: 480px) {
         img {
           width: 60px;
         }
-        .shield, .hand, .clock {
+        .shield,
+        .hand,
+        .clock {
           width: 70px;
         }
       }
@@ -277,7 +281,7 @@
         padding-right: 50px;
         @media screen and (max-width: 480px) {
           font-size: 1.5rem;
-          padding-right: 0; 
+          padding-right: 0;
         }
       }
       p {
@@ -324,7 +328,7 @@
         @media screen and (max-width: 480px) {
           font-size: 1.8em;
           padding-right: 0px;
-          margin: 5px 0
+          margin: 5px 0;
         }
       }
       p {
@@ -345,7 +349,7 @@
           margin-top: 0px;
         }
         align-items: flex-start;
-        
+
         section {
           min-height: 90px;
           width: 600px;
@@ -392,7 +396,6 @@
       height: 70%;
       padding: 0 20px;
       background: $background;
-      
 
       display: flex;
       flex-direction: column;
@@ -450,9 +453,9 @@
         padding-right: 10px;
         @media screen and (max-width: 480px) {
           padding: 0;
-          height: 300px
+          height: 300px;
         }
-        & *:last-child >.last {
+        & *:last-child > .last {
           @media screen and (max-width: 480px) {
             margin-bottom: 40px;
           }
@@ -479,15 +482,16 @@
     width: 100vw;
     height: 560px;
     padding: 0 25.359%;
-    @media screen and (max-width:480px) {
+    @media screen and (max-width: 480px) {
       padding: 0 3rem;
       height: 300px;
     }
     background: $background;
     .textContainer {
       color: $main-text;
-      @media screen and (max-width:480px) {
+      @media screen and (max-width: 480px) {
         font-weight: 600;
+        z-index: 1;
       }
       h4 {
         font-weight: 600;
@@ -496,14 +500,14 @@
       h1 {
         margin: 10px 0;
         font-size: 3em;
-        @media screen and (max-width:480px) {
+        @media screen and (max-width: 480px) {
           font-size: 2em;
         }
       }
       p {
         width: 60%;
         color: $back-text;
-        @media screen and (max-width:480px) {
+        @media screen and (max-width: 480px) {
           width: 100%;
         }
         .accentSpan {
@@ -517,11 +521,12 @@
     }
     img {
       width: 380px;
-      @media screen and (max-width:480px) {
+      @media screen and (max-width: 480px) {
         width: 250px;
         position: absolute;
-        opacity: 0.3;  
+        opacity: 0.3;
         left: -7rem;
+        z-index: 0;
       }
     }
   }
@@ -539,10 +544,10 @@
       height: unset;
       margin-top: 80px;
       grid-template-columns: repeat(2, 1fr);
-      grid-template-rows: repeat(3,1fr);
+      grid-template-rows: repeat(3, 1fr);
       grid-template-areas: 'site site' 'logo hotlink';
       & > div {
-        grid-area : logo;
+        grid-area: logo;
         display: flex;
         justify-content: center;
         width: fit-content;
@@ -592,7 +597,7 @@
       width: 400px;
       align-items: flex-start;
       justify-content: space-between;
-      @media screen and (max-width:480px) {
+      @media screen and (max-width: 480px) {
         width: 100%;
       }
       li {
@@ -610,7 +615,7 @@
       .row {
         width: 380px;
         justify-content: space-between;
-        @media screen and (max-width:480px) {
+        @media screen and (max-width: 480px) {
           width: 100%;
         }
         .icons {
@@ -630,7 +635,7 @@
   .flexRow {
     @media screen and (max-width: 480px) {
       min-height: 35px;
-      padding:unset !important;
+      padding: unset !important;
       padding-left: 10px !important;
     }
     .flexRow {
