cursor: 👈 to pointer

--- a/packages/client/src/sass/LandingPage-style.scss
+++ b/packages/client/src/sass/LandingPage-style.scss
@@ -22,6 +22,7 @@
         li {
           font-weight: 500;
           list-style: none;
+          cursor: pointer;
         }
       }
       .btnWrapper {
@@ -356,6 +357,7 @@
       justify-content: space-between;
       li {
         list-style: none;
+        cursor: pointer;
       }
       .bold {
         font-weight: 600;
