--- a/packages/client/src/sass/ContactPage-style.scss
+++ b/packages/client/src/sass/ContactPage-style.scss
@@ -42,6 +42,7 @@
           font-weight: 500;
           list-style: none;
           margin-left: 20px;
+          cursor: pointer;
         }
       }
       .btnWrapper {
@@ -159,6 +160,7 @@
           justify-content: space-between;
           li {
             list-style: none;
+            cursor: pointer;
           }
           .bold {
             font-weight: 600;
