--- a/packages/client/src/sass/SupportPage-style.scss
+++ b/packages/client/src/sass/SupportPage-style.scss
@@ -40,6 +40,7 @@
           margin-left: 20px;
           font-weight: 500;
           list-style: none;
+          cursor: pointer;
         }
       }
       .btnWrapper {
@@ -157,6 +158,7 @@
       justify-content: space-between;
       li {
         list-style: none;
+        cursor: pointer;
       }
       .bold {
         font-weight: 600;
